--- a/package.json
+++ b/package.json
@@ -55,23 +55,23 @@
   "dependencies": {
     "@apollo/client": "3.13.8",
     "@apollo/composition": "2.10.2",
-    "@graphql-inspector/core": "3.3.0",
+    "@graphql-inspector/core": "6.1.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
-    "apollo-server-express": "3.10.1",
-    "body-parser": "1.20.1",
-    "dataloader": "2.0.0",
-    "date-fns": "2.28.0",
-    "dotenv": "10.0.0",
-    "express": "4.18.1",
-    "graphql": "16.5.0",
-    "ioredis": "5.0.2",
-    "joi": "17.6.0",
-    "kafkajs": "1.15.0",
-    "knex": "2.4.2",
+    "apollo-server-express": "3.13.0",
+    "body-parser": "2.0.0",
+    "dataloader": "2.2.2",
+    "date-fns": "4.1.0",
+    "dotenv": "16.4.5",
+    "express": "4.21.1",
+    "graphql": "16.9.0",
+    "ioredis": "5.4.1",
+    "joi": "17.13.3",
+    "kafkajs": "2.2.4",
+    "knex": "3.1.0",
     "lodash": "4.17.21",
     "mysql2": "3.14.1",
-    "prismjs": "1.28.0",
+    "prismjs": "1.29.0",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-diff-viewer": "3.1.1",
@@ -110,7 +110,7 @@
     "commander": "^6.0.0",
     "core-js": "^3.22.3",
     "coveralls": "3.1.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "8.19.0",
     "eslint-config-prettier": "8.5.0",
